--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ echarts.js linguist-vendored=false
 common.js linguist-vendored=false
 bootstrap.js linguist-vendored=false
 art-template.js linguist-vendored=false
+*.js linguist-language=javascript
