--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,12 @@ target/
 *.iws
 *.iml
 *.ipr
+jquery3.3.1.js
+unslider.min.js
+echarts.js
+common.js
+bootstrap.js
+art-template.js
 
 ### NetBeans ###
 /nbproject/private/
