--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.ftl linguist-language=html
 special-vendored-path/* linguist-vendored
 jquery3.3.1.js linguist-vendored=false
 unslider.min.js linguist-vendored=false
